--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,9 +11,12 @@ services:
       - USER1_NAME=${USER1_NAME}
       - USER2_ID=${USER2_ID}
       - USER2_NAME=${USER2_NAME}
+      - TZ=Asia/Tehran        # 👈 اضافه کردن timezone
     volumes:
       - ./data:/app/data
       - ./logs:/app/logs
+      - /etc/localtime:/etc/localtime:ro   # 👈 سینک کردن ساعت میزبان
+      - /etc/timezone:/etc/timezone:ro
     networks:
       - telegram-bot-network
     # Optional: Add health check
