--- a/telegram-bot.service
+++ b/telegram-bot.service
@@ -7,7 +7,7 @@ Type=simple
 User=ubuntu
 WorkingDirectory=/home/ubuntu/telegram-bot
 EnvironmentFile=/home/ubuntu/telegram-bot/.env
-ExecStart=/usr/bin/python3 main.py
+ExecStart=/usr/bin/python3 /src/main.py
 Restart=always
 RestartSec=10
 
